[package]
name = "interactive-dag"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"
fnv = "1.0.7"
arbitrary = { version = "1", optional=true, features = ["derive"] }

[features]
test-utils = ["arbitrary"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
